--- a/creative-agency/index.html
+++ b/creative-agency/index.html
@@ -40,7 +40,7 @@
 	<!-- Header -->
 	<header id="home">
 		<!-- Background Image -->
-		<div class="bg-img" style="background-image: url('./img/background1.jpg');">
+		<div class="bg-img" style="background-image: url('./img/background1.png');">
 			<div class="overlay"></div>
 		</div>
 		<!-- /Background Image -->
