changes in height

--- a/creative-agency/index.html
+++ b/creative-agency/index.html
@@ -88,13 +88,14 @@
 		<!-- /Nav -->
 
 		<!-- home wrapper -->
-		<div class="home-wrapper">
+		<div class="home-wrapper" style="margin-top: 150px;">
 			<div class="container">
 				<div class="row">
 
 					<!-- home content -->
-					<div class="col-md-10 col-md-offset-2">
-						<div class="home-content" style="text-align: right;">
+					<div class="col-md-12">
+                        <p></p>
+						<div class="home-content" style="text-align: left;">
 							<h1 class="white-text">SHIVOOG</h1>
 							<p class="white-text" style="font-size: 55px;">Never feel helpless again</p>
 							<!--<button class="white-btn">Get Started!</button>
