--- a/creative-agency/index.html
+++ b/creative-agency/index.html
@@ -125,14 +125,14 @@
 					<h2 class="title"><br><br>A look at the current scenario</h2>
 				</div>
 				<!-- /Section header -->
-                <h2><center><br>There is a rising trend of child abductions in India...</center></h2>
-                <p><center><br>Official crime data from the National Crime Records Bureau (NCRB) shows that the reported rate of child abductions has risen at a far sharper pace than the overall crime rate in the country. Rate of kidnapping of children has increased far more sharply as compared to rate of overall IPC crimes. The share of child kidnapping in overall kidnappings rose from 23% in 2006 to 40% in 2012, and then climbed further to 60% in 2016, NCRB data shows.</center></p>
+                <h2><center><br>Crime Against Women Up 83%</center></h2>
+                <p><center><br>As many as 39 crimes against women were reported every hour in India. Reported cases of crime against women increased 83% from 185,312 in 2007 to 338,954 in 2016. 38,947 Rape cases reported in 2016, or four every hour. </center></p>
                 <p><center><b>Delhi, Goa and Maharashtra reported the highest rate of child kidnappings in 2016.<br><br><br><br></b></center></p>
                 
                 <div class="container">
                     <div class="row">
-                       <div class="col-md-6"> <img class="img-responsive" src="./img/07.jpg" alt="" width="auto">  </div>
-                       <div class="col-md-6"> <img class="img-responsive" src="./img/08.jpg" alt="" width="auto"> </div>
+                       <div class="col-md-12"> <img class="img-responsive" src="./img/07.jpg" alt="" width="auto">  </div>
+                       <!--<div class="col-md-6"> <img class="img-responsive" src="./img/08.jpg" alt="" width="auto"> </div>-->
                     </div>
                 </div>
                 <p><center><br><br><b>SOURCE:</b><a href="https://www.livemint.com/Politics/Bv4TbeToCpVS9j4IX3hJjN/The-rising-trend-of-child-abductions-in-India.html"><img class="logo" src="img/livemint.jpg" href="" alt="livemint"></a></center></p>
