--- a/creative-agency/index.html
+++ b/creative-agency/index.html
@@ -95,9 +95,9 @@
 					<!-- home content -->
 					<div class="col-md-12">
                         <p></p>
-						<div class="home-content" style="text-align: left;">
-							<h1 class="white-text">SHIVOOG</h1>
-							<p class="white-text" style="font-size: 55px;">Never feel helpless again</p>
+						<div class="home-content" style="text-align: left; color:#FFD700">
+							<h1 class="white-text" style="color:black;">SHIVOOG</h1>
+							<p class="white-text" style="font-size: 55px; color:black;">Never feel helpless again</p>
 							<!--<button class="white-btn">Get Started!</button>
 							<button class="main-btn">Learn more</button>-->
 						</div>
@@ -128,15 +128,15 @@
 				<!-- /Section header -->
                 <h2><center><br>Crime Against Women Up 83%</center></h2>
                 <p><center><br>As many as 39 crimes against women were reported every hour in India. Reported cases of crime against women increased 83% from 185,312 in 2007 to 338,954 in 2016. 38,947 Rape cases reported in 2016, or four every hour. </center></p>
-                <p><center><b>Delhi, Goa and Maharashtra reported the highest rate of child kidnappings in 2016.<br><br><br><br></b></center></p>
+                <!--<p><center><b>Delhi, Goa and Maharashtra reported the highest rate of child kidnappings in 2016.<br><br><br><br></b></center></p>-->
                 
                 <div class="container">
-                    <div class="row">
+                    <div class="row"><center>
                        <div class="col-md-12"> <img class="img-responsive" src="./img/07.jpg" alt="" width="auto">  </div>
                        <!--<div class="col-md-6"> <img class="img-responsive" src="./img/08.jpg" alt="" width="auto"> </div>-->
-                    </div>
+                    </center></div>
                 </div>
-                <p><center><br><br><b>SOURCE:</b><a href="https://www.livemint.com/Politics/Bv4TbeToCpVS9j4IX3hJjN/The-rising-trend-of-child-abductions-in-India.html"><img class="logo" src="img/livemint.jpg" href="" alt="livemint"></a></center></p>
+                <p><center><br><br><b>SOURCE:</b><a href="http://www.indiaspend.com/cover-story/crime-against-women-up-83-conviction-rate-hits-decadal-low-18239"><img class="logo" src="img/is_logo.png" href="" alt="IndiaSpend"></a></center></p>
 				<!-- about -->
 				<!-- /about -->
 
