image changed sides

--- a/creative-agency/index.html
+++ b/creative-agency/index.html
@@ -95,9 +95,9 @@
 					<!-- home content -->
 					<div class="col-md-12">
                         <p></p>
-						<div class="home-content" style="text-align: left; color:#FFD700">
-							<h1 class="white-text" style="color:black;">SHIVOOG</h1>
-							<p class="white-text" style="font-size: 55px; color:black;">Never feel helpless again</p>
+						<div class="home-content" style="text-align: right; color:#FFD700">
+							<h1 class="white-text" style="text-shadow: 0 0 4px #000000;">SHIVOOG</h1>
+							<p class="white-text" style="font-size: 55px;  text-shadow: 0 0 4px #000000;">Never feel helpless again</p>
 							<!--<button class="white-btn">Get Started!</button>
 							<button class="main-btn">Learn more</button>-->
 						</div>
