hud hud dabanng dabanng dabangg dabanngg

--- a/creative-agency/index.html
+++ b/creative-agency/index.html
@@ -53,7 +53,7 @@
 					<!-- Logo -->
 					<div class="navbar-brand">
 						<a href="index.html">
-							<img class="logo" src="img/logo.png" alt="logo">
+							<img class="logo" src="img/Untitled.png" alt="logo">
 							<!--<img class="logo-alt" src="img/logo-alt.jpg" alt="logo">-->
 						</a>
 					</div>
@@ -166,7 +166,7 @@
 				<!-- /Section header -->
 
 				<!-- Work -->
-                <p><center style="font-size: 25px">We are developing a watch to help you have peace of mind knowing <br>where your loved ones are at all times with<br> realtime location tracking and SOS signal with audio/video/photo uploads<br>where all the information is secured using Blockchain Technology.<br><br><br><br></center></p>
+                <p><center style="font-size: 25px">We are developing a smartwatch that will empower You <br>to notify your loved ones/emergency contacts, of your location if you are in danger <br>with SOS signal & real time location tracking and audio/video/photo uploads, <br>where all the data is secured using Blockchain Technology.<br><br><br><br></center></p>
                 
                 <div class="section-header text-center">
 					<h2 class="title"><br><br>How it Works</h2>
@@ -202,8 +202,8 @@
 				<!-- /Work -->
 
 				<!-- Work -->
-				<div class="col-md-6 col-xs-6 work">
-					<img class="img-responsive" src="./img/03.png" alt="" >
+				<!--<div class="col-md-6 col-xs-6 work">
+					<img class="img-responsive" src="./img/03.png" alt="" >-->
 					<!--<div class="overlay"></div>
 					<div class="work-content">
 						<span>Category</span>
@@ -213,12 +213,12 @@
 							<a class="lightbox" href="./img/03.jpg"><i class="fa fa-search"></i></a>
 						</div>
 					</div>-->
-				</div>
+				<!--</div>-->
 				<!-- /Work -->
 
 				<!-- Work -->
-				<div class="col-md-6 col-xs-6 work">
-					<img class="img-responsive" src="./img/04.png" alt="" >
+				<!--<div class="col-md-6 col-xs-6 work">
+					<img class="img-responsive" src="./img/04.png" alt="" >-->
 					<!--<div class="overlay"></div>
 					<div class="work-content">
 						<span>Category</span>
@@ -228,12 +228,12 @@
 							<a class="lightbox" href="./img/04.jpg"><i class="fa fa-search"></i></a>
 						</div>
 					</div>-->
-				</div>
+				<!--</div>-->
 				<!-- /Work -->
 
 				<!-- Work -->
-				<div class="col-md-6 col-xs-6 work" style="float: right;">
-					<img class="img-responsive" src="./img/05.jpg" alt="" >
+				<!--<div class="col-md-6 col-xs-6 work" style="float: right;">
+					<img class="img-responsive" src="./img/05.jpg" alt="" >-->
 					<!--<div class="overlay"></div>
 					<div class="work-content">
 						<span>Category</span>
@@ -243,12 +243,12 @@
 							<a class="lightbox" href="./img/05.jpg"><i class="fa fa-search"></i></a>
 						</div>
 					</div>-->
-				</div>
+				<!--</div>-->
 				<!-- /Work -->
 
 				<!-- Work -->
-				<div class="col-md-6 col-xs-6 work">
-					<img class="img-responsive" src="./img/06.png" alt="" >
+				<!--<div class="col-md-6 col-xs-6 work">
+					<img class="img-responsive" src="./img/06.png" alt="" >-->
 					<!--<div class="overlay"></div>
 					<div class="work-content">
 						<span>Category</span>
@@ -258,7 +258,7 @@
 							<a class="lightbox" href="./img/06.jpg"><i class="fa fa-search"></i></a>
 						</div>
 					</div>-->
-				</div>
+				<!--</div>-->
 				<!-- /Work -->
 
 			</div>
