--- a/creative-agency/index.html
+++ b/creative-agency/index.html
@@ -552,14 +552,16 @@
 						<button class="main-btn">Send message</button>
 					</form>
 				</div>-->
-				<!-- /contact form -->
-
+				<!-- /contact form --> 
 			</div>
 			<!-- /Row -->
 
 		</div>
 		<!-- /Container -->
-
+        <center style="margin-top: 30px;"> 
+            <p> </p> <p> </p>
+                <script>(function(t,e,s,n){var o,a,c;t.SMCX=t.SMCX||[],e.getElementById(n)||(o=e.getElementsByTagName(s),a=o[o.length-1],c=e.createElement(s),c.type="text/javascript",c.async=!0,c.id=n,c.src=["https:"===location.protocol?"https://":"http://","widget.surveymonkey.com/collect/website/js/tRaiETqnLgj758hTBazgdzA7HrPhuN1WyGmzk_2FudIBeSH3oxxAXQ8vMvkYYbWWRK.js"].join(""),a.parentNode.insertBefore(c,a))})(window,document,"script","smcx-sdk");</script>
+                </center>
 	</div>
 	<!-- /Contact -->
 
