--- a/creative-agency/index.html
+++ b/creative-agency/index.html
@@ -166,7 +166,7 @@
 				<!-- /Section header -->
 
 				<!-- Work -->
-                <p><center style="font-size: 25px">We are developing a smartwatch that will empower You <br>to notify your loved ones/emergency contacts, of your location if you are in danger <br>with SOS signal & real time location tracking and audio/video/photo uploads, <br>where all the data is secured using Blockchain Technology.<br><br><br><br></center></p>
+                <p><center style="font-size: 25px">Shivoog empowers You notify your loved ones (or emergency contacts) with SOS, your real-time location and audio/video/photo uploads when you are in danger. All data is secure and private through the integration of Blockchain Technology<br><br><br><br></center></p>
                 
                 <div class="section-header text-center">
 					<h2 class="title"><br><br>How it Works</h2>
@@ -353,11 +353,11 @@
                     <div class="container row"> 
 					<div class="feature col-md-6 col-md-offset-3">
 						<p><i class="fa fa-check"></i>
-						Track with any smartphone, Android or iOS.</p>
+						Connect Your watch with Android or iOS</p>
 					</div>
 					<div class="feature col-md-6 col-md-offset-3">
 						<p><i class="fa fa-check"></i>
-						Get accurate real-time tracking data by GPS+LBA+4G.</p>
+						Get accurate real-time tracking data by GPS+4G.</p>
 					</div>
 					<div class="feature col-md-6 col-md-offset-3">
 						<p><i class="fa fa-check"></i>
